# hilbert

./: .gitignore  BUILD_MACOS.md  CMakeLists.txt  README.md  __init__.py  cmake_text.txt  doc.rst  plugin.cc  pymodule.py
cmake/: Findmpi4py.cmake  cc_cavity.cmake  psi4OptionsTools.cmake
doci/: david.h  doci_solver.cc  doci_solver.h
focas/: focas_full_hessian.F90  focas_genfock.F90  focas_redundant.F90  focas_semicanonical.F90  focas_transform_oeints.F90  focas_transform_teints.F90
pp2rdm/: blas.cc  blas.h  plugin.cc  pp2rdm_solver.h  threeindexintegrals.cc  write_tpdm.cc
src/: plugin.cc
src/cc_cavity/: README.md
src/cc_cavity/include/: cc_cavity.h  eom_driver.h  eom_rdm.h  lambda_driver.h
src/cc_cavity/misc/: diis_qed.cc  nonsym_davidson_solver_qed.cc  nonsym_davidson_solver_qed.h  qed_blas.h  qed_blas_mangle.h  ta_diis.cc  ta_diis.h  ta_helper.cc  ta_helper.h  ta_helper.hpp  threeindexintegralsta.cc  threeindexintegralsta.h  timer.cc  timer.h
src/cs_ksdft/: cs_solver.cc  cs_solver.h
src/doci/: blas.h  david.cc  david.h  doci_solver.cc  doci_solver.h  fcidump.cc  fortran.h  threeindexintegrals.cc  update_transformation_matrix.cc  write_tpdm.cc
src/focas/: exponentiate_step.cc  focas_c_interface.h  focas_data.F90  focas_diis.F90  focas_driver.F90  focas_energy.F90  focas_exponential.F90  focas_full_hessian.F90  focas_genfock.F90  focas_gradient.F90  focas_gradient_hessian.F90  focas_hessian.F90  focas_interface.F90  focas_redundant.F90  focas_semicanonical.F90  focas_transform_driver.F90  focas_transform_oeints.F90  focas_transform_teints.F90  orbital_optimizer.cc  orbital_optimizer.h  orbopt_energy.cc  orbopt_exponential.cc  orbopt_gradient.cc  orbopt_hessian.cc  orbopt_integraltransform_cpu.cc  orbopt_lagrangian.cc  orbopt_optimize.cc  orbopt_sort.cc  transform_ints.cc  transform_ints.h  update_transformation_matrix.cc
src/jellium/: jellium_integrals.cc  jellium_integrals.h  jellium_scf_solver.cc  jellium_scf_solver.h  legendre.cc  legendre.h
src/libsdp/: bpsdp_solver.cc  bpsdp_solver.h  cg_solver.cc  cg_solver.h  rrsdp_solver.cc  rrsdp_solver.h  sdp_solver.h
src/mcpdft/: README.md  lsda_gga_functionals.cc  mcpdft_solver.cc  mcpdft_solver.h  plugin.cc  pymodule.py  read_opdm.cc  read_range_separated_integrals.cc  read_tpdm.cc  rs_functionals.cc
src/misc/: backtransform_tpdm.cc  backtransform_tpdm.h  blas.h  blas_mangle.h  bpsdp_solver.cc  bpsdp_solver.h  cg_solver.cc  cg_solver.h  davidson_solver.cc  davidson_solver.h  diis.cc  diis.h  dual_sdp_solver.cc  dual_sdp_solver.h  hilbert_psifiles.h  integraltransform_sort_so_tpdm.cc  integraltransform_tpdm_unrestricted.cc  lbfgs_helper.cc  lbfgs_helper.h  misc.h  nonsym_davidson_solver.cc  nonsym_davidson_solver.h  omp.h  real_space_density.cc  real_space_density.h  rrsdp_solver.cc  rrsdp_solver.h  schmidt_add.cc  schmidt_add.h  sdp_solver.cc  sdp_solver.h  sq_rsp.cc  sq_rsp.h  threeindexintegrals.cc  threeindexintegrals.h  update_transformation_matrix.cc
src/p2rdm/: p2rdm_residual.cc  p2rdm_solver.cc  p2rdm_solver.h  write_tpdm.cc
src/polaritonic_scf/: hf.cc  hf.h  rcis.cc  rcis.h  rdfrpa.cc  rdfrpa.h  rdfrpa_batched.cc  rhf.cc  rhf.h  rks.cc  rks.h  rohf.cc  rohf.h  rrpa.cc  rrpa.h  rtddft.cc  rtddft.h  uccsd.cc  uccsd.h  uhf.cc  uhf.h  uks.cc  uks.h  utddft.cc  utddft.h
src/pp2rdm/: diis.cc  diis.h  linear_response.cc  minimization_routines.cc  pp2rdm_solver.cc  pp2rdm_solver.h  update_transformation_matrix.cc  write_tpdm.cc
src/psi4numpy/: README.md
src/psi4numpy_polaritonic_scf/: cqed_cis.ipynb  cqed_rhf.ipynb  cqed_rhf.py  helper_cis.py  helper_cqed_cis.py  helper_cqed_rhf.py  helper_cs_cqed_cis.py  mgh_exploration.ipynb  model_hamiltonian.ipynb  validate_cqed_rhf.ipynb
src/python_api/: python_helpers.cc  python_helpers.h
src/rt_tdhf/: tdhf.cc  tdhf.h
src/v2rdm_casscf/: backtransform_tpdm.cc  basis.cc  checkpoint.cc  d2.cc  d3.cc  d4.cc  e3.cc  extended_koopmans.cc  f3.cc  fcidump.cc  g2.cc  generalized_pauli.cc  generalized_pauli_3_10.cc  generalized_pauli_3_6.cc  generalized_pauli_3_8.cc  generalized_pauli_4_10.cc  generalized_pauli_4_8.cc  generalized_pauli_5_10.cc  natural_orbitals.cc  oei.cc  orbital_lagrangian.cc  python_api.cc  q2.cc  q3.cc  sortintegrals.cc  spin.cc  t1.cc  t2.cc  tei.cc  update_primal.cc  update_transformation_matrix.cc  v2rdm_helper.cc  v2rdm_helper.h  v2rdm_solver.cc  v2rdm_solver.h  write_3pdm.cc  write_opdm.cc  write_tpdm.cc  write_tpdm_iwl.cc
src/v2rdm_doci/: backtransform_tpdm.cc  backtransform_tpdm.h  basis.cc  cg_solver.cc  cg_solver.h  checkpoint.cc  d2.cc  d3.cc  g2.cc  gpu_transform_3index_teint.cc  gpu_transform_3index_teint.h  integraltransform_sort_so_tpdm.cc  integraltransform_tpdm_unrestricted.cc  oei.cc  orbital_lagrangian.cc  q2.cc  sortintegrals.cc  t1.cc  t2.cc  tei.cc  update_primal.cc  v2rdm_doci_solver.cc  v2rdm_doci_solver.h  v2rdm_solver.cc  v2rdm_solver.h  write_tpdm.cc  write_tpdm_iwl.cc
tests/: Makefile  test_psiapi.py
tests/doci/: output.ref
tests/jellium_scf/: output.ref
tests/mcpdft/: output.ref
tests/p2rdm/: output.ref
tests/pccd/: output.ref
tests/polaritonic_scf/: dft.in  dft.ref  grad.in  output.ref  rpa.in  tddft.in  tddft.ref
tests/polaritonic_uccsd/: hubbard.in  hubbard.ref  output.ref
tests/pp2rdm/: output.ref
tests/pyscf_interface/: pyscf_psiapi_test.py
tests/qed_ccsd/: hubbard.in  hubbard.ref  output.ref
tests/qed_ccsd_ta/: output.ref
tests/qed_ccsd_ta-1/: output.ref
tests/qed_ccsd_ta-2/: output.ref
tests/qed_ccsd_ta-3/: output.ref
tests/qed_ccsd_ta-4/: output.ref
tests/qed_dft/: dfrpa.in  output.ref  rpa.in
tests/qed_dft_gradient/: output.ref
tests/qed_response/: output.ref
tests/qed_response-1/: output.ref
tests/qed_response-2/: output.ref
tests/qed_response-3/: output.ref
tests/qed_response-4/: output.ref
tests/qed_tddft/: output.ref
tests/qed_tddft-1/: output.ref
tests/qed_tddft-2/: output.ref
tests/v2rdm2/: output.ref
tests/v2rdm3/: output.ref
tests/v2rdm4/: output.ref
tests/v2rdm5/: output.ref
tests/v2rdm_doci/: output.ref
tests/xc_hole/: vs.in
(+128 files in other folders)
